--- a/css/estilos.css
+++ b/css/estilos.css
@@ -23,7 +23,7 @@ header .logo{
     padding: 20px 0 20px 0;
 }
 
-div{  
+/*div{  
     background-image: linear-gradient(135deg, #f5f7fa 0%, #c3cfe2 100%);
     list-style: none;
     display: flex;
@@ -31,12 +31,7 @@ div{
     align-items: center;
     margin: 0;
     padding: 10px 20px 10px 20px;
-}
-
-div .cell{
-    background: none;
-    padding: 0;
-}
+}*/
 
 div nav .identificacion li{
     display: inline-block;
@@ -61,7 +56,7 @@ div nav .identificacion li{
 
 .menu li a{
     padding: 15px;
-    margin: 10px;
+    margin: 5px;
     color: #eaeaea;
     text-decoration: none;
     display:inline-block;
@@ -144,16 +139,17 @@ footer img{
     justify-content: center;
 }
 
-.categorias img{
-    /*background-color: rgb(255, 255, 255);
-    border-radius: 70%;*/
-    margin: 0px auto;
-    width: 10%;
-    padding: 25px;
+.icono{
+    width: 200px;
+    background-color: #ffffff;
+    border-radius: 90%;
+    padding: 2rem;
+    margin-bottom: 1rem;
 }
 
-.text1{
-    margin: 0px auto 100px;
+.tarjeta{
+    text-align: center;
+    margin: 5rem 4rem 5rem 0;
     font-weight: bold;
     font-size: 20px;
 }
@@ -173,25 +169,68 @@ footer img{
 
 .productos{
     display: flex;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     justify-content: space-around;
 }
 
-.productos img{
-    margin: 60px auto 0;
-    width: 18%;
+.tarjeta2{
+    text-align: center;
+    font-size: 20px;
+    margin: 3rem 0;
+    
+}
+
+.joya{
+    width: 300px;
+    padding: 0.5rem;
+    margin-bottom: 1rem;
     border-radius: 5%;
 }
 
-.text3{
-    font-size: 20px;
-    margin: 25px 80px 0 auto;
+.precio{
+    color: darkslateblue;
+    font-weight: bold;
 }
 
+.botonver{
+    display: flex;
+    flex: wrap;
+    justify-content: center;
+}
+
+.vertodo{
+    display: flex;
+    border-radius: 50px;
+    padding: 0.5rem 1rem;
+    background-color: darkslateblue;
+    border-color: darkslateblue;
+    border-color: none;
+}
+
+.vertodo:hover{
+    background-color: white;
+    border-radius: 50px;
+    border-color: darkslateblue;
+}
+
+.vertodo-texto{
+    text-decoration: none;
+    color: #ffffff;
+    font-size: 16px;
+}
+
+.vertodo-texto:hover{
+    text-decoration: none;
+    color: darkslateblue;
+}
+
+
+/*
 .boton{
     background-image: none;
     margin: 15px auto;
     padding: 10px 30px;
     border-radius: 50px;
     justify-content: center;
-}
+}*/
+
